--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       <br>
 
 
-      <button class="buttons" id="btnValidar">Validar</button></a> <!--creamos un boton--->
+      <button class="buttons" id="btnValidar">Validar</button> <!--creamos un boton--->
 
     </section>
 
@@ -37,7 +37,7 @@
 
 
 
-      <button class="buttons" id="btnInicio">Inicio</button></a>
+      <button class="buttons" id="btnInicio">Inicio</button>
     </section>
 
     <!-- ************esto se muestra cuando la tarjeta es valida ************ -->
@@ -48,6 +48,9 @@
 </body>
 
 <!-- 5352621771856289 -->
+<!-- 4083952015263 -->
+<!-- × debería retornar true para "4083952015263" (25 ms) -->
+<!-- × debería retornar true para "79927398713" (13 ms) -->
 
 
 </html>
